--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": ["react", "typescript", "github", "api"],
   "author": "",
   "license": "MIT",
-  "homepage": "https://github.com/0xSifu/github-repositories-explorer",
+  "homepage": "https://0xsifu.github.io/github-repositories-explorer",
   "dependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
